[package]
name = "wasm_test"
version = "0.1.0"
authors = ["Matthew Collier <mcollier@digitalbazaar.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.68"
js-sys = "0.3.45"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
lto = true
opt-level = 3

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
